# variwizard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  gdb.sh  varikey-import.cmake
.github/workflows/: firmware.yaml  source-code.yaml
src/: varikey_command.hpp  varikey_device.hpp  varikey_gadget.hpp  varikey_gadget_usb.cpp  varikey_gadget_usb.hpp  wizard.cpp  wizard.hpp  wizard_args.cpp  wizard_args.hpp  wizard_usb.cpp  wizard_usb.hpp
src/example/: report-example.cpp
src/pulp/: chunk.h  macros.cpp  macros.hpp
src/varikey/: varikey_command.cpp  varikey_command.hpp  varikey_device.hpp  varikey_gadget_usb.cpp  varikey_gadget_usb.hpp
src/wizard/: wizard.cpp  wizard_args.cpp  wizard_args.hpp  wizard_config.cpp  wizard_config.hpp  wizard_revision.h  wizard_usb.cpp
